--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
 
     <string name="app_name">XmppClient</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_hc">HcActivity</string>
+    <string name="action_settings">设置</string>
+    <string name="title_activity_hc">httpClient</string>
+    <string name="title_activity_login">登录</string>
+    <string name="title_activity_register">注册</string>
 
 </resources>
